Make DPS device/service samples use our logger instead of Console.WriteLine

--- a/provisioning/device/samples/how to guides/SymmetricKeySample/SymmetricKeySample.csproj
+++ b/provisioning/device/samples/how to guides/SymmetricKeySample/SymmetricKeySample.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\..\..\..\iothub\device\src\Microsoft.Azure.Devices.Client.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\samples\helpers\ColorConsoleLogger\ColorConsoleLogger.csproj" />
+  </ItemGroup>
+
 </Project>
