--- a/provisioning/service/samples/getting started/IndividualEnrollmentSample/IndividualEnrollmentSample.csproj
+++ b/provisioning/service/samples/getting started/IndividualEnrollmentSample/IndividualEnrollmentSample.csproj
@@ -26,4 +26,7 @@
     <ProjectReference Include="..\..\..\src\Microsoft.Azure.Devices.Provisioning.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\samples\helpers\ColorConsoleLogger\ColorConsoleLogger.csproj" />
+  </ItemGroup>
 </Project>
