--- a/provisioning/device/samples/getting started/ComputeDerivedSymmetricKeySample/ComputeDerivedSymmetricKeySample.csproj
+++ b/provisioning/device/samples/getting started/ComputeDerivedSymmetricKeySample/ComputeDerivedSymmetricKeySample.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\samples\helpers\ColorConsoleLogger\ColorConsoleLogger.csproj" />
+  </ItemGroup>
 </Project>
