--- a/vsts/cleanup.yaml
+++ b/vsts/cleanup.yaml
@@ -7,7 +7,7 @@ jobs:
       vmImage: ubuntu-20.04
     steps:
       - task: PowerShell@2
-        name: 'Cleanup IoT hub and DPS'
+        displayName: 'Cleanup IoT hub and DPS'
         inputs:
           targetType: 'inline'
           script: '.\build.ps1 -runCleanupSamples'
