create initial contracts and methods for HTTP device onboarding

--- a/provisioning/transport/http/src/Microsoft.Azure.Devices.Provisioning.Transport.Http.csproj
+++ b/provisioning/transport/http/src/Microsoft.Azure.Devices.Provisioning.Transport.Http.csproj
@@ -90,8 +90,8 @@
       <Link>Common\device\provisioning\transport\SymmetricKeyRegistrationResult.cs</Link>
     </Compile>
     <Compile Include="$(Common)\DefaultWebProxySettings.cs" />
-    <Compile Include="$(Generated)\Models\DeviceRegistration.cs">
-      <Link>Generated\Models\DeviceRegistration.cs</Link>
+    <Compile Include="$(Generated)\Models\*.*">
+      <Link>Generated\Models\%(FileName)%(Extension)</Link>
     </Compile>
     <Compile Include="$(Common)\HttpContentExtensions.cs">
       <LinkBase>Common</LinkBase>
@@ -104,7 +104,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.21" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
   </ItemGroup>
 
   <ItemGroup>
