add sas token creation mechanism

--- a/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
+++ b/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
@@ -62,6 +62,9 @@
     <Compile Include="$(Common)\device\provisioning\transport\RetryJitter.cs">
       <Link>Common\device\provisioning\transport\RetryJitter.cs</Link>
     </Compile>
+    <Compile Include="$(Common)\device\provisioning\transport\ProvisioningSasBuilder.cs">
+        <Link>Common\device\provisioning\transport\ProvisioningSasBuilder.cs</Link>
+    </Compile>
     <Compile Include="$(Common)\DefaultWebProxySettings.cs" />
     <Compile Include="$(Common)\HttpContentExtensions.cs">
       <LinkBase>Common</LinkBase>
