--- a/discovery/device/src/Microsoft.Azure.Devices.Discovery.Client.csproj
+++ b/discovery/device/src/Microsoft.Azure.Devices.Discovery.Client.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.19.3</Version>
+    <Version>1.0.0</Version>
     <Title>Microsoft Azure Discovery Device Client SDK</Title>
     <IncludeSource>True</IncludeSource>
     <IncludeSymbols>True</IncludeSymbols>
@@ -40,7 +40,7 @@
     <PackageIcon>nugetIcon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Azure/azure-iot-sdk-csharp</PackageProjectUrl>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageTags>Microsoft Azure Discovery Device Client .NET AMQP MQTT HTTP</PackageTags>
+    <PackageTags>Microsoft Azure Discovery Device Client .NET HTTP</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
