--- a/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
+++ b/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <RootNamespace>Microsoft.Azure.Devices.Provisioning.Client.Transport</RootNamespace>
+    <RootNamespace>Microsoft.Azure.Devices.Discovery.Client.Transport</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <OutputPath>.\bin\$(Configuration)</OutputPath>
@@ -30,8 +30,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.15.3</Version>
-    <Title>Microsoft Azure IoT Provisioning Device Client HTTP Transport</Title>
+    <Version>1.0.0</Version>
+    <Title>Microsoft Azure Discovery Device Client HTTP Transport</Title>
     <IncludeSource>True</IncludeSource>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -42,7 +42,7 @@
     <PackageIcon>nugetIcon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Azure/azure-iot-sdk-csharp</PackageProjectUrl>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageTags>Microsoft Azure IoT Provisioning Device Client .NET HTTP</PackageTags>
+    <PackageTags>Microsoft Azure Discovery Device Client .NET HTTP</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -82,6 +82,6 @@
 
   <ItemGroup>
     <ProjectReference Include="$(RootDir)\shared\src\Microsoft.Azure.Devices.Shared.csproj" />
-    <ProjectReference Include="$(RootDir)\discovery\device\src\Microsoft.Azure.Devices.discovery.Client.csproj" />
+    <ProjectReference Include="$(RootDir)\discovery\device\src\Microsoft.Azure.Devices.Discovery.Client.csproj" />
   </ItemGroup>
 </Project>
