--- a/discovery/device/samples/how to guides/TpmSample/TpmSample.csproj
+++ b/discovery/device/samples/how to guides/TpmSample/TpmSample.csproj
@@ -15,6 +15,8 @@
     <ProjectReference Include="$(RootDir)\shared\src\Microsoft.Azure.Devices.Shared.csproj" />
     <ProjectReference Include="$(RootDir)\discovery\device\src\Microsoft.Azure.Devices.Discovery.Client.csproj" />
     <ProjectReference Include="$(RootDir)\discovery\transport\http\src\Microsoft.Azure.Devices.Discovery.Transport.Http.csproj" />
+    <ProjectReference Include="$(RootDir)\provisioning\device\src\Microsoft.Azure.Devices.Provisioning.Client.csproj" />
+    <ProjectReference Include="$(RootDir)\provisioning\transport\http\src\Microsoft.Azure.Devices.Provisioning.Transport.Http.csproj" />
     <ProjectReference Include="$(RootDir)\security\tpm\src\Microsoft.Azure.Devices.Provisioning.Security.Tpm.csproj" />
   </ItemGroup>
 
