--- a/discovery/device/samples/how to guides/TpmSample/Properties/launchSettings.json.template
+++ b/discovery/device/samples/how to guides/TpmSample/Properties/launchSettings.json.template
@@ -1,10 +1,7 @@
 {
   "profiles": {
     "TpmSample": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "DPS_IDSCOPE": "<yourProvisioningIDScope>"
-      }
+      "commandName": "Project"
     }
   }
 }
