--- a/discovery/device/samples/how to guides/TpmSample/TpmSample.csproj
+++ b/discovery/device/samples/how to guides/TpmSample/TpmSample.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <SelfContained>true</SelfContained>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <RootDir>$(MSBuildProjectDirectory)\..\..\..\..\..</RootDir>
