--- a/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
+++ b/discovery/transport/http/src/Microsoft.Azure.Devices.Discovery.Transport.Http.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.1;netcoreapp2.1.30;net48</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.1;net48</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RootNamespace>Microsoft.Azure.Devices.Discovery.Client.Transport</RootNamespace>
