Revert "remove net451 specific blocks"
This reverts commit bd1d5fcf6b3e90315bde673e6a1a6f5e7895a8b3.

--- a/vsts/test-release-nuget.yaml
+++ b/vsts/test-release-nuget.yaml
@@ -180,6 +180,8 @@ jobs:
           FRAMEWORK: netcoreapp2.1.30
         .Net Framework 4.7.2:
           FRAMEWORK: net472
+        .Net Framework 4.5.1:
+          FRAMEWORK: net451
 
     condition: succeeded()
     pool:
