--- a/e2e/test/E2ETests.csproj
+++ b/e2e/test/E2ETests.csproj
@@ -14,6 +14,23 @@
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
+  <!-- Legacy .NET 4.5.1 -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+    <Compile Remove="config\TestConfiguration.Provisioning.cs" />
+    <Compile Remove="provisioning\ProvisioningE2ETests.cs" />
+    <Compile Remove="provisioning\ProvisioningServiceClientE2ETests.cs" />
+    <Compile Remove="provisioning\ProvisioningCertificateValidationE2ETest.cs" />
+    <Compile Remove="provisioning\ReprovisioningE2ETests.cs" />
+    <Compile Remove="helpers\StorageContainer.cs" />
+    <Compile Remove="helpers\ImportExportDevicesHelpers.cs" />
+    <Compile Remove="iothub\service\RegistryManagerImportDevicesTests.cs" />
+    <Compile Remove="iothub\service\RegistryManagerExportDevicesTests.cs" />
+    <Compile Remove="iothub\service\DigitalTwinClientE2ETests.cs" />
+    <Compile Remove="helpers\digitaltwins\models\ThermostatTwin.cs" />
+    <Compile Remove="helpers\digitaltwins\models\TemperatureControllerTwin.cs" />
+    <Compile Remove="helpers\ProvisioningServiceRetryPolicy.cs" />
+  </ItemGroup>
+
   <!-- All Platforms -->
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
@@ -25,7 +42,12 @@
     <PackageReference Include="System.Diagnostics.Tracing" Version="4.3.0" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!-- Legacy .NET 4.5.1 -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+    <!-- .NET 4.5.1 requires the System.ValueTuple NuGet package to be referenced explicitly. -->
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net451' ">
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.3" />
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
   </ItemGroup>
@@ -35,7 +57,7 @@
     <ProjectReference Include="$(RootDir)\iothub\service\src\Microsoft.Azure.Devices.csproj" />
     <ProjectReference Include="$(RootDir)\shared\src\Microsoft.Azure.Devices.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" ('$(AZURE_IOT_LOCALPACKAGES)' == '') ">
+  <ItemGroup Condition=" ('$(AZURE_IOT_LOCALPACKAGES)' == '') And ( '$(TargetFramework)' != 'net451' ) ">
     <ProjectReference Include="$(RootDir)\provisioning\device\src\Microsoft.Azure.Devices.Provisioning.Client.csproj" />
     <ProjectReference Include="$(RootDir)\provisioning\transport\amqp\src\Microsoft.Azure.Devices.Provisioning.Transport.Amqp.csproj" />
     <ProjectReference Include="$(RootDir)\provisioning\transport\http\src\Microsoft.Azure.Devices.Provisioning.Transport.Http.csproj" />
@@ -52,7 +74,7 @@
     <PackageReference Include="Microsoft.Azure.Devices.Shared" Version="1.*" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.*" />
   </ItemGroup>
-  <ItemGroup Condition=" ('$(AZURE_IOT_LOCALPACKAGES.ToUpper())' != '')">
+  <ItemGroup Condition=" ('$(AZURE_IOT_LOCALPACKAGES.ToUpper())' != '') And ( '$(TargetFramework)' != 'net451' ) ">
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.*" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Amqp" Version="1.*" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Http" Version="1.*" />
