--- a/provisioning/device/samples/getting started/X509Sample/X509Sample.csproj
+++ b/provisioning/device/samples/getting started/X509Sample/X509Sample.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Amqp" Version="1.16.4" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Http" Version="1.15.2" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Mqtt" Version="1.17.2" />
+
+    <!-- Working around a bug between DotNetty and .NET 5.0+ by specifying the exact version of DotNetty.Common that has the fix -->
+    <PackageReference Include="DotNetty.Common" Version="0.7.4" />
   </ItemGroup>
 
 </Project>
