--- a/iothub/device/samples/how to guides/DeviceReconnectionSample/DeviceReconnectionSample.csproj
+++ b/iothub/device/samples/how to guides/DeviceReconnectionSample/DeviceReconnectionSample.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
+    <!-- Working around a bug between DotNetty and .NET 5.0+ by specifying the exact version of DotNetty.Common that has the fix -->
+    <PackageReference Include="DotNetty.Common" Version="0.7.4" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
