--- a/iothub/device/samples/solutions/PnpDeviceSamples/PnpConvention/PnpHelpers.csproj
+++ b/iothub/device/samples/solutions/PnpDeviceSamples/PnpConvention/PnpHelpers.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+
+    <!-- Working around a bug between DotNetty and .NET 5.0+ by specifying the exact version of DotNetty.Common that has the fix -->
+    <PackageReference Include="DotNetty.Common" Version="0.7.4" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
