--- a/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
+++ b/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Service" Version="1.18.2" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+
+    <!-- Working around a bug between DotNetty and .NET 5.0+ by specifying the exact version of DotNetty.Common that has the fix -->
+    <PackageReference Include="DotNetty.Common" Version="0.7.4" />
   </ItemGroup>
 
 </Project>
