--- a/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
+++ b/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,7 +11,7 @@
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
 
     <!-- Working around a bug between DotNetty and .NET 5.0+ by specifying the exact version of DotNetty.Common that has the fix -->
-    <PackageReference Include="DotNetty.Common" Version="0.7.4" />
+    <PackageReference Include="DotNetty.Common" Version="0.7.5" />
   </ItemGroup>
 
 </Project>
