add storsimple feed to nuget config

--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageRestore>
         <!-- Allow NuGet to download missing packages -->
@@ -11,5 +11,7 @@
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="StorSimple" value="https://msazure.pkgs.visualstudio.com/_packaging/StorSimple/nuget/v3/index.json" />
+
     </packageSources>
 </configuration>
